[package]
name = "rstartup"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
hyper = "0.14"
listenfd = "1"
anyhow = "1.0"
tracing = "0.1"
axum = { version = "0.5", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
sentry = { version = "0.26", optional = true }
redis = { version = "0.21", features = ["tokio-comp"], optional = true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { version = "0.8", features = ["server"] }

[features]
default = []
sentry = ["dep:sentry"]
kv = ["dep:redis"]